2004-10-06  Dan Winship  <danw@novell.com>

	* libsoup/soup-ssl.h (SoupSocketError): add
	SOUP_SSL_ERROR_CERTIFICATE.

	* libsoup/soup-gnutls.c (do_handshake): Pass the GError to
	verify_certificate.
	(verify_certificate): Set the GError appropriately rather than
	spewing g_warnings.

	* libsoup/soup-socket.c (read_from_network, soup_socket_write): If
	the GIOChannel operation returns an error, store it as GOBject
	data on the socket (as a hack so soup-message-io.c can access it
	without us needing to change SoupSocket's API).

	* libsoup/soup-message-io.c (io_error): peek at the socket's
	"last_error" datum and set the message's status to SSL_FAILED
	(with the GError's message string) rather than IO_ERROR, if
	appropriate. For 64414.

2004-09-30  Dan Winship  <danw@novell.com>

	* libsoup/soup-gnutls.c (soup_gnutls_init): Add this, with some
	extra initialization needed for libgcrypt 1.2 or higher. Fixes
	66342.
	(soup_ssl_get_client_credentials,
	soup_ssl_get_server_credentials): Call soup_gnutls_init().

2004-08-26  Dan Winship  <danw@novell.com>

	* configure.in: Bump version to 2.2.0.

	* AUTHORS: Update this to reflect the last 2 years.

	* NEWS: Brief summary of 1.99.x -> 2.2 changes

	* README, TODO: Updates

2004-08-26  Dan Winship  <danw@novell.com>

	* libsoup/*: add/fix lots of gtk-doc comments
	
	* libsoup/soup-misc.c (soup_str_case_hash, soup_str_case_equal):
	Fix bug noticed while documenting. (We were using the
	locale-case-insensitive functions rather than the g_ascii_ ones.)

	* libsoup/soup-message.h (SoupMessageFlags): remove the (never
	implemented) NO_PIPELINE and NO_COOKIE flags.

	* docs/reference/tmpl/*.sgml: Regenerate, fill in some stuff.
	There are still problems here with gtk-doc not recognizing many of
	the objects in libsoup...

2004-08-13  JP Rosevear  <jpr@novell.com>

	* configure.in: bump version, libtool number

2004-08-09  Dan Winship  <danw@novell.com>

	* libsoup/soup-connection.c (soup_connection_connect_sync): Don't